# tracely

./: .pre-commit-config.yaml  ADR.md  AGENTS.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SPEC.md  _typos.toml  clippy.toml  codecov.yml  deny.toml  gitleaks.toml  nextest.toml  package.json
.agileplus/: worklog.md
.github/workflows/: ci.yml  deploy-docs.yml  pages-deploy.yml
benches/: tracely.rs
crates/tracely-core/src/: logging.rs  tracing.rs
crates/tracely-sentinel/: .editorconfig  .env.example  .gitignore  ADR.md  AGENTS.md  ARCHIVED.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  clippy.toml  gitleaks.toml  worklog.md
crates/tracely-sentinel/.agileplus/: worklog.md
crates/tracely-sentinel/.agileplus/specs/: index.yaml  traceability-matrix.yaml
crates/tracely-sentinel/.agileplus/specs/001-sentinel-core/: SPEC.md  meta.json  tasks.md
crates/tracely-sentinel/.agileplus/specs/architecture-decisions/: adr_001.yaml
crates/tracely-sentinel/.agileplus/specs/functional-requirements/: fr_001.yaml
crates/tracely-sentinel/.agileplus/specs/user-stories/: us_001.yaml
crates/tracely-sentinel/.github/ISSUE_TEMPLATE/: feature_request.md
crates/tracely-sentinel/.github/workflows/: quality-gate.yml  security-guard.yml
crates/tracely-sentinel/benches/: perf.rs
crates/tracely-sentinel/docs/: journeys.md
crates/tracely-sentinel/docs/.vitepress/: config.mts
crates/tracely-sentinel/docs/.vitepress/theme/: custom.css
crates/tracely-sentinel/docs/journeys/: index.md
crates/tracely-sentinel/docs/stories/: index.md
crates/tracely-sentinel/docs/traceability/: index.md
crates/tracely-sentinel/fuzz/: Cargo.toml
crates/tracely-sentinel/phenotype-sentinel/coverage/: tarpaulin-report.html
crates/tracely-sentinel/src/: bulkhead.rs  circuit_breaker.rs  config.rs  lib.rs  rate_limiter.rs  validation.rs
crates/tracely-sentinel/tests/bdd/: steps.rs
crates/tracely-sentinel/tests/bdd/features/: test.feature
docs/: index.md
docs/.vitepress/: config.ts
src/: lib.rs  tracing.rs
