[package]
name = "tracely"
version = "0.1.0"
edition = "2021"
description = "Unified observability: tracing, metrics, logging"
license = "MIT"
repository = "https://github.com/KooshaPari/tracely"

[dependencies]
tracing = "0.1"
metrics = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = "0.21"
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"
