[workspace]
resolver = "2"
members = [
    "crates/tracely-core",
    "crates/tracely-sentinel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KooshaPari/Tracely"
authors = ["Koosha Pari <kooshapari@users.noreply.github.com>"]

[workspace.dependencies]
# Add shared dependencies here