[package]
name = "phenotype-sentinel"
version = "0.1.0"
edition = "2021"
description = "Rate limiting, circuit breaker, bulkhead"
license = "MIT"
repository = "https://github.com/KooshaPari/sentinel"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt"] }

[[bench]]
name = "perf"
harness = false
